--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/CriteriaDetails.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/CriteriaDetails.cshtml
@@ -72,7 +72,7 @@
     }
 
 </td>
-                    <td>
+                    <td class="text-overflow-large">
                         @Html.DisplayFor(modelItem => item.JudgeName)
                     </td>
                     <td>
