Routes now hide question marks and what the ID is for. Starting to fix redirects if parameters are null

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
@@ -71,7 +71,7 @@
                 {
                     <div class="multi-field criteria-list-item">
                         <input type="text" name="criteria[0].name" placeholder="New Criteria" value="@item.Name" />
-                        <input type="text" name="criteria[0].description" placeholder="Criteria Description" value="@item.Description" />
+                        <textarea name="criteria[0].description" placeholder="Criteria Description" >@item.Description </textarea>
                         <button type="button" class="remove-field btn btn-warning"> Remove </button>
                     </div>
                 }
