--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -100,6 +100,10 @@
                                 }
                             </div>
                         }
+                        else
+                        {
+                            <span>N/A</span>
+                        }
                     </td>
                     <td>
                         @Html.ActionLink("View team members", "AllTeamMembersForATeam", new { teamID= item.TeamID})
