--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/Index.cshtml
@@ -93,5 +93,5 @@ else
 <div class="PageDiv">
     <div style="float: right;">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
     @Html.PagedListPager(Model, page => Url.Action("Index",
-    new { page, searchAContest = ViewBag.searchAContest, sortContests = ViewBag.sortContests }))
+    new { page, searchAContest = ViewBag.searchStringValue, sortContests = ViewBag.sortContests }))
 </div>
