--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
@@ -90,7 +90,7 @@ else if (User.IsInRole("Judge"))
 
         <div style="float: right;">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
         @Html.PagedListPager(Model, page => Url.Action("Index",
-new { page, searchAContest = ViewBag.searchAContest, sortContests = ViewBag.sortContests }))
+new { page, searchAContest = ViewBag.SearchStringValue, sortContests = ViewBag.sortContests }))
     </div>
 
 
