--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -132,17 +132,31 @@ else if (User.IsInRole("Admin"))
                         }
                         else
                         {
-                            <span>Waiting for @Html.DisplayFor(modelItem => item.JudgeNotSubmitted) judges</span>
-                            <div class="text-overflow-small">
-                                @foreach(var judgeName in item.NamesOfJudgeNotSubmitted)
-                                {
-                                    <span>@judgeName</span><br />
-                                }
-                            </div>
-                        }
+                            if (ViewBag.YourSubmission != null)
+                            {
+                                <div class="text-overflow-small">
+                                    @if (item.YourCurrentScore != null && !item.Submitted)
+                                    {
+                                        <span>Waiting for you Submit</span>
+                                    }
+                                    else
+                                    {
+                                        <span>Waiting for you Judge</span >
+                                    }
+
+                                </div>
+                            }
+                               <span>Waiting for @Html.DisplayFor(modelItem => item.JudgeNotSubmitted) judges</span>
+                                    <div class="text-overflow-small">
+                                        @foreach (var judgeName in item.NamesOfJudgeNotSubmitted)
+                                        {
+                                            <span>@judgeName</span><br />
+                                        }
+                                    </div>
+                         }
 
 
-                    </td>
+</td>
                     @if (User.IsInRole("Judge"))
                 {
 
