--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -132,12 +132,12 @@ else if (User.IsInRole("Admin"))
                         }
                         else
                         {
-                            if (ViewBag.YourSubmission != null)
+                            if (ViewBag.YourSubmission != null && item.JudgeNotSubmitted==1)
                             {
                                 <div class="text-overflow-small">
                                     @if (item.YourCurrentScore != null && !item.Submitted)
                                     {
-                                        <span>Waiting for you submit</span>
+                                        <span>Waiting for you to submit</span>
                                     }
                                     else
                                     {
@@ -145,8 +145,7 @@ else if (User.IsInRole("Admin"))
                                     }
 
                                 </div>
-                            }
-                            else {
+                            }else {
                                 <span>Waiting for @Html.DisplayFor(modelItem => item.JudgeNotSubmitted) judges</span>
                                 <div class="text-overflow-small">
                                     @foreach (var judgeName in item.NamesOfJudgeNotSubmitted)
