Styled the mobile Judge/Team pages.

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/Judge_Participant.css
@@ -225,6 +225,14 @@ footer{
     overflow: hidden;
     text-overflow: ellipsis; 
 }
+
+   .text-overflow-multi-line {
+    width: 17em;
+    white-space: normal;
+    text-overflow: ellipsis; 
+}
+
+
     .team-members-table td{
         display: inline;
         border-style: none !important;
