--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -74,7 +74,7 @@
                         </td>
 
                         <td>
-                            <div class="text-overflow-large">
+                            <div class="text-overflow-multi-line">
 
                             @item.Description </div>
                         </td>
