--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/AdminContestResponsiveTable.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/AdminContestResponsiveTable.css
@@ -59,9 +59,9 @@ td, th {
             white-space: nowrap;
         }
 
-	td:nth-of-type(1):before { content: "Team Name"; }
-	td:nth-of-type(2):before { content: "Final Score"; }
-	td:nth-of-type(3):before { content: "Judge Not Submitted"; }
+	td:nth-of-type(1):before { content: "Team Name: "; }
+	td:nth-of-type(2):before { content: "Final Score: "; }
+	td:nth-of-type(3):before { content: "Status: "; }
 
 
 }
