--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/AdminIndexResponsive.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/AdminIndexResponsive.css
@@ -58,10 +58,10 @@ td, th {
             padding-right: 10px;
             white-space: nowrap;
         }
-    td:nth-of-type(1):before { content: "Name"; }
-	td:nth-of-type(2):before { content: "Start Time"; }
-	td:nth-of-type(3):before { content: "Location"; }
-	td:nth-of-type(4):before { content: "Published"; }
+    td:nth-of-type(1):before { content: "Name: "; }
+	td:nth-of-type(2):before { content: "Start Time: "; }
+	td:nth-of-type(3):before { content: "Location: "; }
+	td:nth-of-type(4):before { content: "Published: "; }
 
 
 
