--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/ContestDetailResponsiveTables.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/ContestDetailResponsiveTables.css
@@ -64,12 +64,12 @@ td, th {
 	td:nth-of-type(2):before { content: "Last Name"; }
 	td:nth-of-type(3):before { content: "Email"; }*/
     
-    table.judgeTable td:nth-of-type(1):before {content: "First Name"}
-    table.judgeTable td:nth-of-type(2):before {content: "Last Name"}
-    table.judgeTable td:nth-of-type(3):before {content: "Email"}
+    table.judgeTable td:nth-of-type(1):before {content: "First Name: "}
+    table.judgeTable td:nth-of-type(2):before {content: "Last Name: "}
+    table.judgeTable td:nth-of-type(3):before {content: "Email: "}
 
-    table.participantTable td:nth-of-type(1):before {content: "Team Name"}
-    table.participantTable td:nth-of-type(2):before {content: "Name"}
-    table.participantTable td:nth-of-type(3):before {content: "Email"}
+    table.participantTable td:nth-of-type(1):before {content: "Team Name: "}
+    table.participantTable td:nth-of-type(2):before {content: "Name: "}
+    table.participantTable td:nth-of-type(3):before {content: "Email: "}
 
 }
