--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestScores.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestScores.cshtml
@@ -9,11 +9,11 @@
 }
 
 @section scripts{
-    <script src="~/JavaScript/Judge-Participant.js"></script>
+<script src="~/JavaScript/FinalizeContest.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<link rel="stylesheet" href="~/Styles/ContestScores.css" />
+  <link rel="stylesheet" href="~/Styles/ContestScores.css" />
 }
 
 
@@ -55,26 +55,27 @@
         <div class="title">Results for: @ViewBag.searchStringValue</div>
         <p>@Html.ActionLink("Get all teams", "Contest", new { contestID = ViewBag.contestId })</p>
     }
-    <table>
-        <caption>SelectWinners</caption>
-        <tbody id="sortable2" class="droptrue">
-            <tr>
-                
-                <td>First Place:</td>
-            </tr>
-            <tr>
-                <td>Second Place:</td>
-       
-            </tr>
-            <tr>
-                <td>Third Place:</td>
-        
-            </tr>
-        </tbody>
-    </table>
+    <div>
+        <ul class="droptrue" id="sortable1">
+            <li>First: </li>
+            <li>Second: </li>
+            <li>Third: </li>
+        </ul>
 
+    </div>
+    <div>
+        <ul id="sortable2" class="droptrue">
+            @foreach (var item in Model)
+            {
+                <li>
+                    <div class="col-md-3">@Html.DisplayFor(modelItem => item.TeamName)</div><div class="col-md-3">@*@Html.DisplayFor(modelItem => item.FinalScore)*@ 7/7</div>
+                </li>
 
-    <table>
+            }
+        </ul>
+    </div>
+   
+    @*<table>
         <thead>
             <tr>
                 <th>
@@ -89,7 +90,7 @@
         <tbody id="sortable1" class="droptrue">
             @foreach (var item in Model)
             {
-                <tr>
+                @*<tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.TeamName)
                     </td>
@@ -121,10 +122,10 @@
                         }
 
                     </td>
-                </tr>
-            }
+                </tr>*@
+            @*}
         </tbody>
-    </table>
+    </table>*@
 
 
 
