--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
@@ -46,12 +46,14 @@ else if (User.IsInRole("Judge"))
 
     @if (ViewBag.searchStringValue == "")
     {
-        <div class="title">All contests</div>
+        <div class="title">All Published Contests</div>
     }
     else
     {
         <div class="title">Results for: @ViewBag.searchStringValue</div>
     }
+    
+
     <table>
         <thead>
             <tr>
@@ -69,6 +71,7 @@ else if (User.IsInRole("Judge"))
         <tbody>
             @foreach (var item in Model)
             {
+                
                 <tr>
                     <td>
                         @Html.ActionLink(item.Name, "contest", new { contestId = item.Id })
