Updated update time on landing page,

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Shared/_Layout.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                     }
                     else
                     {
-                        <a class="navbar-brand" href='@Url.Action("Index", "Judge")'>
+                        <a class="navbar-brand" href='@Url.Action("Index", "Participant")'>
                             <img src="@Url.Content("~/Images/logo-orange.png")" />
                         </a>
                     }
