--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/ContestScores.css
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Styles/ContestScores.css
@@ -17,7 +17,9 @@ td, th {
   border: 1px solid #ccc; 
   text-align: left; 
 }
-
+ul{
+    list-style-type:none;
+}
 
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
 
