Fixed some routing errors

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestScores.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestScores.cshtml
@@ -92,7 +92,7 @@
 
     <div id="centerLists">
         <div class="title">
-
+            Winners
             <ul class="droptrue" id="sortable1">
                 <li id="first"> First:</li>
                 <li id="second"> Second:</li>
